# Computer-OpenGL-ComputerGraphics

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
.github/workflows/: build-msvc.yml  deploy-doxygen.yml
app/: CMakeLists.txt  main.cpp  test.main.cpp
apps/: CMakeLists.txt  main.cpp  test.main.cpp
apps/chapter1/: CMakeLists.txt  entry.cpp  entry.h  main.cpp
apps/chapter2/: CMakeLists.txt  entry.cpp  entry.h  main.cpp
apps/chapter3/: entry.cpp  entry.h  main.cpp
cmake/: CXXStandard.cmake  Dependency.cmake  Doxygen.cmake  mingw-w64.cmake
config/: CMakeLists.txt  config.hpp.in
doc/: Doxyfile.in
doc/pages/: index.md
docs/: 0_context.md  1_초기화.md  2_inputs.md  3_texture.md  4_quadric.md  extra_1_fixed_pipeline_cartoonrender.md
docs/App개선/: BeforeAfter.md
docs/metahuman/: WaterDrop_정리집.md  compass_artifact_wf-4245d2a8-4d8a-4248-aabf-7bad417a206b_text_markdown.md  compass_artifact_wf-aa448a0f-7bf8-48d0-8b78-5bf4183aed53_text_markdown.md  메타휴먼계획.md
docs/보고서/: 메타휴먼발표자료.md  에러핸들링.md
resources/: scene_state.json
samples/: CMakeLists.txt
samples/CharlieBrown/: CMakeLists.txt  main.cpp
samples/Doraemon/: CMakeLists.txt  graphic.cpp
samples/IULastFantasy/: CMakeLists.txt  main.cpp
samples/LEGOSpiderman/: CMakeLists.txt  main.cpp
samples/TanningKitty/: CMakeLists.txt  main.cpp
shell/: BuildExternLibs.bat  BuildExternLibs.sh  CMakeALL.sh  CMakeBuild.sh  CMakeClear.sh  CMakeConfigureAndGenerate.sh  CMakeConfigureNGenerate.sh  CMakeExecute.sh
src/: CMakeLists.txt  camera.cpp  camera.h  constants.h  display.cpp  display.h  ground.cpp  ground.h  inputs.cpp  inputs.h  lighting.cpp  lighting.h  model.cpp  model.h  model_imp.h  renderer.cpp  renderer.h  resource_management.cpp  resource_management.h  skybox.cpp  skybox.h  transformable.h  user_interface.cpp  user_interface.h
tutorials/: CMakeLists.txt
tutorials/chapter1/: entry.cpp  entry.h  main.cpp
tutorials/chapter1/src/: chapter1.cpp  chapter1.h
tutorials/chapter2/: CMakeLists.txt  main.cpp
tutorials/chapter2/src/: chapter2.cpp  chapter2.h
tutorials/chapter3/: main.cpp
tutorials/chapter3/src/: CMakeLists.txt  chapter3.cpp  chapter3.h
tutorials/chapter4/: CMakeLists.txt  main.cpp
tutorials/chapter4/src/: chapter4.cpp  chapter4.h
tutorials/chapter5/: main.cpp
tutorials/chapter5/src/: chapter5.cpp  chapter5.h
tutorials/chapter6/: CMakeLists.txt  main.cpp
tutorials/chapter7/: main.cpp
